feat(Linkear archivo .js al proyecto)

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
   <link rel="stylesheet" href="./css/style.css">  
 </head>
@@ -29,5 +28,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/cyeguez" target="_blank"> César Yeguez</a>.
   </footer>
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
