feat(Terminar estilos header desktop)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul class="header__menu__list">
           <li class="header__menu__list__item">
             <a href="#" class="header__menu__list__link header__menu__list__link--icon "> Features </a>
-            <ul class="header__menu__list__sub-list">
+            <ul class="header__menu__list__sub-list header__menu__list__sub-list--list1">
               <li class="header__menu__list__sub-list__item">
                 <a href="#" class="header__menu__list__sub-list__link"><img src="./assets/images/icon-todo.svg"
                     alt=""> Todo List</a>
@@ -44,7 +44,7 @@
 
           <li class="header__menu__list__item">
             <a href="#" class="header__menu__list__link header__menu__list__link--icon"> Company </a>
-            <ul class="header__menu__list__sub-list">
+            <ul class="header__menu__list__sub-list header__menu__list__sub-list--list2  ">
               <li class="header__menu__list__sub-list__item">
                 <a href="#" class="header__menu__list__sub-list__link"> History</a>
               </li>
