feat(Styles de ambas vistas culminados con js)

--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
       <img src="./assets/images/icon-menu.svg" class="header__btn-menu " alt="Menu hamburger">
       <img src="./assets/images/icon-close-menu.svg" alt="close icon" class="header__btn-close">
 
-      <div class="header__menu ">
+      <div class="header__menu  ">
         <ul class="header__menu__list">
-          <li class="header__menu__list__item">
-            <a href="#" class="header__menu__list__link header__menu__list__link--icon "> Features </a>
-            <ul class="header__menu__list__sub-list header__menu__list__sub-list--list1">
+          <li class="header__menu__list__item" id="features">
+            <a href="#" class="header__menu__list__link  header__menu__list__link--icon  " > Features  <img src="./assets/images/icon-arrow-down.svg" alt="arrow" id="arrowFeactures"   ></a>
+            <ul class="header__menu__list__sub-list header__menu__list__sub-list--list1  ">
               <li class="header__menu__list__sub-list__item">
                 <a href="#" class="header__menu__list__sub-list__link"><img src="./assets/images/icon-todo.svg"
                     alt=""> Todo List</a>
               </li>
+
               <li class="header__menu__list__sub-list__item">
-                <a href="#" class="header__menu__list__sub-list__link"><img src="./assets/images/icon-calendar.svg" alt="Calendar Icon"> Calendar </a>
+                <a href="#" class="header__menu__list__sub-list__link"><img src="./assets/images/icon-calendar.svg" alt="Calendar Icon" > Calendar </a>
               </li>
 
               <li class="header__menu__list__sub-list__item">
@@ -43,7 +44,7 @@
           </li>
 
           <li class="header__menu__list__item">
-            <a href="#" class="header__menu__list__link header__menu__list__link--icon"> Company </a>
+            <a href="#" class="header__menu__list__link header__menu__list__link--icon"> Company <img src="./assets/images/icon-arrow-down.svg" alt="arrow" id="arrowCompany"> </a>
             <ul class="header__menu__list__sub-list header__menu__list__sub-list--list2  ">
               <li class="header__menu__list__sub-list__item">
                 <a href="#" class="header__menu__list__sub-list__link"> History</a>
